# openclaw-manager

./: .gitignore  ARCHITECTURE-AUDIT.md  AUTO_INSTALL_IMPLEMENTATION.md  DESIGN.md  EXTREME_SIMPLIFICATION_REPORT.md  IMPLEMENTATION_STATUS.md  NAS_DEPLOYMENT.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PLAN.md  PROJECT_PLAN.md  README.md  STAGE1_COMPLETE.md  STAGE1_PROGRESS.md  STAGE2_PROGRESS.md  boundary-refactor-checklist.md  build.sh  bump-version.sh  dev.sh  docker-compose.yml  findings.md  index.html  litellm-config.example.yaml  mac安装指南.md  package-lock.json  package.json  progress.md  release.sh  stage-roadmap.md  stage1-acceptance.md  stage1-checklist.md  stage1-conclusion.md  stage1-manual-test-run.md  stage1-restart-validation.md  stage2-conclusion.md  stage2-entry.md  stage2-manual-test-quick.md  stage2-manual-test-run.md  stage4-manual-test-checklist.md  task_plan.md  vite.config.ts
.github/workflows/: build.yml
scripts/: ai.openclaw.gateway-control.plist  gateway_control.sh  gateway_control_worker.sh
src/: App.css  App.tsx  App.tsx.backup-173707  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddInstanceModal.tsx  AppContent.tsx  AppSidebar.tsx  AutoInstallModal.tsx  ChannelConfigModal.tsx  InstanceSwitcher.tsx  ModelCard.tsx  ModelFormModal.tsx  ModelProviderSection.tsx  PageErrorBoundary.tsx  README.md  UninstallConfirmModal.tsx
src/config/: navigation.ts  projectStatus.ts
src/hooks/: useAutoInstall.ts  useChatChannels.ts  useGatewayState.ts  (+8 more)
(+45 files in other folders)
